@@ -16,6 +16,10 @@ Version 1.4.8 - CVS
   - Removed conf.pl dependency on Perl IO::Socket module. Automatic detection
     of supported authentication mechanisms is disabled, if IO::Socket is not
     available.
+  - Make the base for the SquirrelMail URL configurable. Adds a new variable
+    config_base_location to config.php and a new option to conf.pl. This is
+    to prevent problems in installs where our heuristic doesn't work
+    correctly (#1521299, #1460675, #1110064, #1000850, #1113791).
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
